--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,100 @@
-#site_header {
+.site_header {
   display: flex;
-  align-items: center;
-  padding: 50px 0px;
-  justify-content: space-around;
+  justify-content: center;
 }
-#main_logo img {
-  width: 100%;
+.main_logo img {
+  margin-left: 146px;
+  width: 60%;
+  margin-top: 41px;
   max-width: 100%;
 }
-#menu_toggle {
+.menu-toggle {
   display: none;
   background-color: #414880;
   color: white;
+  padding: 10px 15px;
   border: none;
-  padding: 10px;
+  font-size: 18px;
   cursor: pointer;
 }
-
-#main_menu ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.main_menu {
+  margin-top: 45px;
+  display: flex;
 }
-
-#main_menu ul li {
-  display: inline-block;
+.main_menu ul{
+  display: flex;
 }
-
-#main_menu a {
+.main_menu li{
+  list-style-type: none;
+  display: flex;
+}
+.main_menu a {
   text-decoration: none;
+  display: flex;
   font-size: 18px;
-  padding-right: 43px;
-  letter-spacing: 1px;
 }
-
-#main_menu a {
-  text-decoration: none;
-  font-size: 18px;
-  padding-right: 43px;
-  letter-spacing: 1px;
-}
-#home_1 {
+.home_1 {
   color: #414880;
+  margin-left: 126px;
+  letter-spacing: 0.8px;
 }
 .home_2 {
   color: #969699;
+  margin-left: 42px;
+  letter-spacing: 0.8px;
 }
-#contact_button a {
+.home_3 {
+  color: #969699;
+  margin-left: 43px;
+  letter-spacing: 0.8px;
+}
+.home_4 {
+  color: #969699;
+  margin-left: 43px;
+  letter-spacing: 0.8px;
+}
+.home_5 {
+  color: #969699;
+  margin-left: 48px;
+  letter-spacing: 0.8px;
+}
+.contact_button {
+  margin-top: 62px;
+}
+.contact_button a {
   text-decoration: none;
   border-radius: 50px;
   color: white;
   font-size: 17px;
   background-color: #ff64ae;
-  padding: 15px 42px 15px 42px;
+  padding: 15px 40px 15px 42px;
   letter-spacing: 1.5px;
+  margin-left: 50px;
 }
-#main_header {
-  padding: 150px 0px;
+.main_header {
+  margin-top: 171px;
   display: flex;
   justify-content: center;
+  padding-left: 37px;
 }
-#clinic {
-  font-size: 50px;
-  line-height: 1.3;
+
+.clinic {
+  font-size: 48px;
+  line-height: 1.22;
   color: rgb(9, 17, 86);
+
+  letter-spacing: 0px;
   margin-bottom: 0px;
 }
-#noteclinic {
-  font-size: 18px;
+.noteclinic {
+  font-size: 17px;
   line-height: 1.4;
-  letter-spacing: 1.2px;
+  letter-spacing: 1.25px;
   margin-top: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 53px;
 }
-#moredetail {
-  padding: 16px 48px;
+.moredetail a {
+  padding: 16px 40px 19px 40px;
   font-size: 16px;
   text-decoration: none;
   border-radius: 50px;
@@ -82,10 +102,13 @@
   color: white;
   letter-spacing: 1.6px;
 }
-#anh2 {
-  padding-left: 40px;
-  margin-top: -23px;
-  width: 626px;
+.moredetail {
+  margin-left: 3px;
+}
+.anh2 {
+  padding-left: 31px;
+  margin-top: -25px;
+  width: 635px;
   max-width: 100%;
 }
 #sliderbt {
@@ -93,141 +116,136 @@
   margin-left: auto;
   margin-right: auto;
   width: fit-content;
+  margin-top: 124px;
 }
 
 #sliderbt img {
   width: 68px;
   max-width: 100%;
 }
-#slider {
-  background-image: url(img/Slide\ Background.png);
+.slider {
+  background-image: url("img/Slide Background.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 88% 100%;
+  height: 100%;
   width: 100%;
 }
+
 #core_servies {
   text-align: center;
-  margin-top: 131px;
+  margin-top: 129px;
   justify-content: center;
   background-size: contain;
 }
 #mainservices {
   color: rgb(255, 113, 181);
-  font-size: 17px;
+  font-size: 16px;
+  margin-left: 4px;
 }
 #learn {
   color: rgb(9, 17, 86);
-  font-size: 37px;
+  font-size: 36px;
   line-height: 1.2;
-  margin-top: 10px;
+  margin-top: 13px;
+  margin-left: 2px;
+  margin-bottom: 0px;
 }
 #porta {
   color: rgb(139, 139, 139);
-  font-size: 19px;
+  font-size: 18px;
   line-height: 1.4;
-  letter-spacing: 0.6px;
-  margin-top: 24px;
+  letter-spacing: 0.55px;
+  margin-top: 21px;
+  margin-left: 2px;
 }
-#box_section {
+.container_box {
   display: flex;
   justify-content: space-between;
-  margin-top: 35px;
+  text-align: center;
+  align-items: center;
+  padding: 0 150px;
+  padding-top: 70px;
+  gap: 56px;
 }
-#box_section img {
-  width: 62%;
+.box_left:hover,
+.box_mid:hover,
+.box_right:hover {
+  box-shadow: 0px 0px 50px 25px #f6f7ff;
 }
-#box_section h1 {
+.box_left,
+.box_mid,
+.box_right {
+  block-size: 31vw;
+  inline-size: 95vh;
+  border-radius: 42px;
+  text-align: center;
+  background-color: #fff;
+}
+.box_left img,
+.box_mid img,
+.box_right img {
+  padding-top: 58px;
+}
+.box_left h2,
+.box_mid h2,
+.box_right h2 {
   font-size: 18px;
-  letter-spacing: 0.3px;
-  padding-top: 25px;
-  color: rgb(30, 37, 100);
+  font-weight: 600;
+  line-height: 22.5px;
+  color: #091156;
+  padding-top: 36px;
 }
-#box_section p {
-  color: rgb(193, 193, 193);
-  font-size: 16px;
-  letter-spacing: 0.75px;
-  padding-top: 10px;
-}
-#left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 100px 110px;
-  background-image: url("img/Box Bacground.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  height: 100%;
-  text-align: center;
-  width: 100%;
-}
-#mid {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 100px 110px;
-  background-image: url("img/Box Bacground.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  height: 100%;
-  text-align: center;
-  width: 100%;
-}
-#right {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 100px 110px;
-  background-image: url("img/Box Bacground.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  height: 100%;
-  text-align: center;
-  width: 100%;
+.box_left p,
+.box_mid p,
+.box_right p {
+  font-size: 14px;
+  font-weight: 400px;
+  line-height: 21px;
+  letter-spacing: 1.4px;
+  color: #8b8b8b;
+  padding-top: 6px;
 }
 #about_us {
   display: flex;
-  margin-top: 67px;
+  margin-top: 113px;
   justify-content: center;
+  margin-left: 76px;
+  gap: 53px;
 }
+
 #aboutus {
   color: rgb(255, 146, 198);
-  margin-top: 28px;
-  font-size: 17px;
+  margin-top: 30px;
+  font-size: 15px;
 }
 #aboutus1 {
-  margin-top: 30px;
-  font-size: 31px;
+  margin-top: 17px;
+  font-size: 33px;
   color: rgb(36, 43, 104);
-  letter-spacing: 0.9px;
+  letter-spacing: 1.5px;
 }
 #aboutus2 {
-  margin-top: 35px;
   font-size: 16px;
   line-height: 1.54;
   color: rgb(141, 141, 141);
-  letter-spacing: 2.1px;
+  letter-spacing: 1.6px;
 }
 #aboutus3 {
-  margin-top: 28px;
+  margin-top: 21px;
   font-size: 16px;
   color: rgb(141, 141, 141);
   line-height: 1.5;
-  letter-spacing: 2px;
+  letter-spacing: 1.49px;
 }
 #aboutus4 {
   display: flex;
   align-items: center;
-  margin-top: 51px;
+  margin-top: 48px;
   justify-content: space-between;
 }
 #learnmore {
-  padding: 18px 52px;
+  padding: 18px 44px 18px 47px;
+  margin-left: -2px;
   font-size: 17px;
   text-decoration: none;
   color: white;
@@ -244,166 +262,117 @@
   text-decoration: none;
   color: rgb(139, 139, 139);
   font-size: 17px;
-  letter-spacing: 1.8px;
+  letter-spacing: 1.1px;
   max-width: 100%;
+  margin-right: 108px;
+  margin-top: 1px;
+  margin-left: -31px;
 }
 #anhnha {
   width: 100%;
 }
 #content {
-  background-image: url(img/Background\ Bubble.png);
+  background-image: url("img/Background\ Bubble.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 62% 58%;
   background-position-x: 100%;
-  background-position-y: 39%;
+  background-position-y: 98%;
 }
 #professsional {
   text-align: center;
-  margin: 100px 0px;
+  margin-top: 68px;
+  margin-bottom: 70px;
 }
 #professsional h1 {
   color: rgb(253, 137, 194);
-  font-size: 15px;
+  font-size: 14px;
   letter-spacing: 1px;
 }
 #professsional h2 {
   color: rgb(32, 40, 102);
-  font-size: 35.5px;
-  margin-top: 30px;
+  font-size: 33.5px;
+  margin-top: 16px;
   letter-spacing: 1px;
 }
 #professsional p {
   color: rgb(174, 174, 174);
-  font-size: 16px;
-  margin-top: 40px;
+  font-size: 15px;
+  margin-top: 28px;
   letter-spacing: 2.1px;
 }
 #mentor_3 {
   display: flex;
-  margin-top: 215px;
   text-align: center;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  padding: 0 150px;
+  padding-top: 136px;
+  gap: 84px;
 }
-#img1 {
-  width: 63%;
-  max-width: 100%;
-}
-#mentor1 h1 {
-  color: rgb(255, 100, 174);
-  font-size: 16px;
-  letter-spacing: 0.3px;
-  margin-top: 41px;
-}
-#mentor1 h2 {
-  color: rgb(9, 17, 86);
-  font-size: 18px;
-  letter-spacing: 0.3px;
-  margin-top: 12px;
-}
-#mentor1 p {
-  color: rgb(186, 186, 186);
-  font-size: 12.5px;
-  letter-spacing: 0.6px;
-  line-height: 24px;
-}
-#mentor1 {
-  background-color: white;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Horizontally center items */
-  justify-content: center; /* Vertically center items */
-  text-align: center; /* Center align text */
-  width: 42%;
-  max-width: 100%;
-  padding: 143px 150px;
-}
-#mentor3 {
-  background-color: white;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Horizontally center items */
-  justify-content: center; /* Vertically center items */
-  text-align: center; /* Center align text */
-  width: 42%;
-  max-width: 100%;
-  padding: 143px 150px;
-}
-#mentor2 {
-  background-image: url(img/Box\ Bacground.png);
-  background-repeat: no-repeat;
-  padding: 143px 150px;
-  background-size: contain;
-  width: 42%;
-  max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Horizontally center items */
-  justify-content: center; /* Vertically center items */
-  text-align: center; /* Center align text */
-  background-position: center;
-}
-#img2 {
-  width: 63%;
-  max-width: 100%;
-}
-#mentor2 h1 {
-  color: rgb(255, 100, 174);
-  font-size: 16px;
-  letter-spacing: 0.3px;
-  margin-top: 41px;
-}
-#mentor2 h2 {
-  color: rgb(9, 17, 86);
-  font-size: 18px;
-  letter-spacing: 0.3px;
-}
-#mentor2 p {
-  color: rgb(186, 186, 186);
-  font-size: 12.5px;
-  letter-spacing: 0.6px;
-  line-height: 24px;
-  margin-top: 0px;
-}
+#img1,
+#img2,
 #img3 {
-  width: 63%;
+  width: 46%;
   max-width: 100%;
 }
-#mentor3 h1 {
+#mentor_3 h1 {
   color: rgb(255, 100, 174);
-  font-size: 16px;
+  font-size: 15px;
   letter-spacing: 0.3px;
-  margin-top: 41px;
+  margin-top: 50px;
+  margin-left: 1px;
 }
-#mentor3 h2 {
+#mentor_3 h2 {
   color: rgb(9, 17, 86);
-  font-size: 18px;
+  font-size: 17px;
   letter-spacing: 0.3px;
-  margin-top: 12px;
+  margin-top: 18px;
+  margin-left: 1px;
 }
-#mentor3 p {
+#mentor_3 p {
   color: rgb(186, 186, 186);
-  font-size: 12.5px;
+  font-size: 15.5px;
   letter-spacing: 0.6px;
-  line-height: 24px;
+  line-height: 22px;
+  margin-top: 20px;
+  margin-left: 1px;
+}
+#mentor1,
+#mentor2,
+#mentor3 {
+  block-size: 31vw;
+  inline-size: 95vh;
+  border-radius: 42px;
+  text-align: center;
+  background-color: #fff;
+}
+#mentor1:hover,
+#mentor2:hover,
+#mentor3:hover {
+  box-shadow: 0px 0px 50px 25px #f6f7ff;
 }
 .lienlac img {
-  width: 100%;
-  margin-top: 23px;
+  width: 75%;
+  margin-top: 26px;
 }
 #contact {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  background-image: url("img/123.png");
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: contain;
+  padding-top: 191px;
+  max-width: 100%;
+  gap: 85px;
+  /* padding-right: 0px; */
+  padding-left: 19px;
 }
 #contact img {
-  width: 100%;
-  padding-top: 218px;
+  width: 98%;
+  padding-top: 199px;
   max-width: 100%;
+  padding-left: 130px;
 }
 #text_box {
   margin-top: 27px;
@@ -411,48 +380,49 @@
 }
 #text_box h1 {
   color: rgb(255, 100, 174);
-  font-size: 17px;
+  font-size: 16px;
   margin-top: 17px;
 }
 #text_box h2 {
   color: rgb(9, 17, 86);
-  font-size: 38px;
+  font-size: 36px;
   margin-top: 7px;
-  line-height: 52px;
+  line-height: 48px;
   letter-spacing: -0.3px;
 }
 #text_box p {
   color: rgb(139, 139, 139);
-  font-size: 19px;
-  letter-spacing: 0.58px;
-  margin-bottom: 50px;
+  font-size: 17px;
+  letter-spacing: 1.08px;
+  margin-bottom: 49px;
+  margin-top: -12px;
 }
 #first {
   border: 1px solid #d9ddfe;
   border-radius: 15px;
-  padding: 21px 15px 21px 25px;
-  margin-right: 36px;
+  padding: 21px 33px 21px 23px;
+  margin-right: 32px;
   color: lightgray;
-  font-size: 17px;
+  font-size: 15px;
   letter-spacing: 2px;
   max-width: 100%;
 }
 #last {
   border: 1px solid #d9ddfe;
   border-radius: 15px;
-  padding: 21px 15px 21px 25px;
+  padding: 21px 30px 21px 27px;
   color: lightgray;
-  font-size: 17px;
-  letter-spacing: 2.2px;
+  font-size: 15px;
+  letter-spacing: 2px;
   max-width: 100%;
 }
 #email {
   border: 1px solid #d9ddfe;
   border-radius: 15px;
-  padding: 23px 308px 21px 25px;
-  margin-top: 40px;
+  padding: 23px 312px 21px 22px;
+  margin-top: 38px;
   color: lightgray;
-  font-size: 17px;
+  font-size: 15px;
   letter-spacing: 2.2px;
   max-width: 100%;
 }
@@ -460,20 +430,20 @@
 #subject {
   border: 1px solid #d9ddfe;
   border-radius: 15px;
-  padding: 23px 308px 21px 25px;
-  margin-top: 40px;
+  padding: 23px 312px 21px 22px;
+  margin-top: 38px;
   color: lightgray;
-  font-size: 17px;
+  font-size: 15px;
   letter-spacing: 2.2px;
   max-width: 100%;
 }
 #your {
   border: 1px solid #d9ddfe;
   border-radius: 15px;
-  padding: 32px 308px 201px 25px;
-  margin-top: 40px;
+  padding: 28px 312px 192px 22px;
+  margin-top: 38px;
   color: lightgray;
-  font-size: 17px;
+  font-size: 15px;
   letter-spacing: 2.2px;
   max-width: 100%;
 }
@@ -481,104 +451,76 @@
   border-radius: 50px;
   background-color: rgb(255, 100, 174);
   border: 1px, solid, white;
-  font-size: 18px;
+  font-size: 15px;
   color: white;
   padding: 21px 58px 21px 57px;
-  margin-top: 40px;
+  margin-top: 54px;
   letter-spacing: 2px;
 }
-#contact {
-  background-image: url(img/123.png);
-  background-repeat: no-repeat;
-  width: 82%;
-  background-size: contain;
-  padding-top: 162px;
-  max-width: 100%;
-}
 #footer {
-  background-image: url(img/Footer\ BG.png);
+  margin-top: 102px;
+  background-image: url("img/Footer BG.png");
   background-repeat: no-repeat;
-  background-size: auto; /* Đảm bảo hình nền luôn bao phủ toàn bộ khu vực */
-  background-position: center; /* Đặt hình nền ở giữa */
+  background-size: auto;
+  background-position: center;
   width: auto;
-  padding-top: 90px;
-  height: auto; /* Để chiều cao tự động điều chỉnh theo nội dung */
-  /* min-height: 200px; Đặt chiều cao tối thiểu để đảm bảo footer luôn đủ cao, bạn có thể điều chỉnh giá trị này */
-  box-sizing: border-box; /* Đảm bảo padding và border được tính vào chiều rộng và chiều cao tổng thể */
+  padding-top: 208px;
+  height: auto;
+  background-size: 100% 100%;
+  padding-bottom: 100px;
+  box-sizing: border-box;
 }
 #footer1 {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   padding-left: 50px;
 }
-#footer1 div {
-  flex: 1; /* Each column takes up equal space */
-  margin-right: 20px; /* Space between columns */
+/* #footer1 div {
+  flex: 1; 
+  margin-right: 20px; 
 }
 
 #footer1 div:last-child {
-  margin-right: 0; /* Remove right margin for the last column */
-}
+  margin-right: 0;
+} */
 
-#button_row {
-  text-align: center;
-  margin-bottom: 20px; /* Space between button and end footer */
-}
-
-#end_footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#end_footer .anhcuoi {
-  flex: 1;
-  margin-left: 50px;
-}
-
-#end_footer #aaaaa {
-  flex: 4;
-  text-align: right;
-  margin-right: 50px;
-}
 #anhlogocuoi {
-  width: 50%;
-  margin-top: 10px;
+  width: 37%;
+  margin-left: 102px;
 }
 #footer2 {
-  font-size: 17px;
+  margin-left: 133px;
+  margin-top: 32px;
+  font-size: 16px;
   font-weight: 100;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.6px;
   color: white;
   padding-left: 0px;
 }
 .footer3 {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 100;
   letter-spacing: 1.2px;
   color: white;
   line-height: 15px;
+  margin-top: 28px;
+  margin-left: 132px;
+  margin-bottom: 0px;
 }
 #diachilienlac {
   display: flex;
+  margin-left: 133px;
+  gap: 44px;
+  margin-top: -4px;
 }
-#aaaaa {
-  text-align: right;
-  font-size: 18px;
+#diachilienlac p {
+  font-size: 14px;
+  font-weight: 100;
+  letter-spacing: 1.4px;
   color: white;
-  letter-spacing: 1.2px;
-  color: white;
+  line-height: 15px;
 }
-#bbbbb {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  width: 37px;
-  align-items: end;
-  float: right;
-  margin-right: 0px;
-}
+
 .anhcuoi img {
   width: 23%;
   max-width: 100%;
@@ -589,30 +531,71 @@
   font-size: 19px;
   color: white;
   letter-spacing: 1px;
-  margin-left: 25px;
+  margin-left: 28px;
+  margin-top: -14px;
 }
 .ef {
   list-style-image: url(img/caret-right.png);
-  font-size: 19px;
+  font-size: 17px;
   line-height: 1;
   color: white;
+  margin-top: 37px;
+  margin-left: 6px;
+  letter-spacing: 0.8px;
 }
 .abcde {
-  font-size: 20px;
-  letter-spacing: 1.5px;
+  align-items: end;
+  font-size: 19px;
   color: white;
-  margin-left: 25px;
+  letter-spacing: 1.6px;
+  margin-left: 53px;
+  margin-top: -14px;
 }
 .efg {
   list-style-image: url(img/caret-right.png);
-  font-size: 19px;
+  font-size: 17px;
   line-height: 1;
-  letter-spacing: 1px;
   color: white;
+  margin-top: 36px;
+  margin-left: 34px;
+  letter-spacing: 0.9px;
+}
+#button_row {
+  margin-top: 42px;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-right: 64px;
+}
+
+#bbbbb {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  width: 37px;
+  align-items: end;
+  float: right;
+  margin-right: 0px;
 }
 #end_footer {
-  margin-top: 50px;
+  margin-top: 116px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+#end_footer .anhcuoi {
+  margin-left: 150px;
+  margin-top: 10px;
+}
+
+#end_footer #aaaaa {
+  text-align: right;
+  margin-right: 147px;
+  font-size: 16px;
+  color: white;
+  letter-spacing: 1.6px;
+}
+.a1{
+height: 100%;
 }
