--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+.clinic,
+#mainservices,
+#learn,
+#aboutus,
+#aboutus1 {
+  font-weight: 600;
+}
 .site_header {
   display: flex;
   justify-content: center;
@@ -21,10 +28,10 @@
   margin-top: 45px;
   display: flex;
 }
-.main_menu ul{
+.main_menu ul {
   display: flex;
 }
-.main_menu li{
+.main_menu li {
   list-style-type: none;
   display: flex;
 }
@@ -35,6 +42,7 @@
 }
 .home_1 {
   color: #414880;
+
   margin-left: 126px;
   letter-spacing: 0.8px;
 }
@@ -82,7 +90,6 @@
   font-size: 48px;
   line-height: 1.22;
   color: rgb(9, 17, 86);
-
   letter-spacing: 0px;
   margin-bottom: 0px;
 }
@@ -287,12 +294,14 @@
   color: rgb(253, 137, 194);
   font-size: 14px;
   letter-spacing: 1px;
+  font-weight: 600;
 }
 #professsional h2 {
   color: rgb(32, 40, 102);
   font-size: 33.5px;
   margin-top: 16px;
   letter-spacing: 1px;
+  font-weight: 600;
 }
 #professsional p {
   color: rgb(174, 174, 174);
@@ -321,6 +330,7 @@
   letter-spacing: 0.3px;
   margin-top: 50px;
   margin-left: 1px;
+  font-weight: 600;
 }
 #mentor_3 h2 {
   color: rgb(9, 17, 86);
@@ -328,6 +338,7 @@
   letter-spacing: 0.3px;
   margin-top: 18px;
   margin-left: 1px;
+  font-weight: 600;
 }
 #mentor_3 p {
   color: rgb(186, 186, 186);
@@ -382,6 +393,7 @@
   color: rgb(255, 100, 174);
   font-size: 16px;
   margin-top: 17px;
+  font-weight: 600;
 }
 #text_box h2 {
   color: rgb(9, 17, 86);
@@ -389,6 +401,7 @@
   margin-top: 7px;
   line-height: 48px;
   letter-spacing: -0.3px;
+  font-weight: 600;
 }
 #text_box p {
   color: rgb(139, 139, 139);
@@ -457,8 +470,19 @@
   margin-top: 54px;
   letter-spacing: 2px;
 }
+#background_footer {
+  background-image: url(img/Bottom\ BG.png);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+  width: auto;
+  height: auto;
+  background-size: 100% 34%;
+  background-position-y: 100%;
+}
 #footer {
-  margin-top: 102px;
+  margin-top: 70px;
+
   background-image: url("img/Footer BG.png");
   background-repeat: no-repeat;
   background-size: auto;
@@ -467,10 +491,11 @@
   padding-top: 208px;
   height: auto;
   background-size: 100% 100%;
-  padding-bottom: 100px;
+  padding-bottom: 82px;
   box-sizing: border-box;
 }
 #footer1 {
+  margin-top: 31px;
   display: flex;
   justify-content: center;
   padding-left: 50px;
@@ -596,6 +621,6 @@
   color: white;
   letter-spacing: 1.6px;
 }
-.a1{
-height: 100%;
+.a1 {
+  height: 100%;
 }
